--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "d": "webpack --mode development",
-    "dev": "webpack --mode development --watch",
-    "server": "webpack-dev-server --open --mode development --watch",
-    "prod": "webpack --mode prodaction"
+    "d": "cross-env THE_CONFIG={\\\"dev\\\":true,\\\"chrome\\\":true} webpack --mode development",
+    "dev": "cross-env THE_CONFIG={\\\"dev\\\":true,\\\"chrome\\\":false} webpack --mode development --watch",
+    "s": "cross-env THE_CONFIG={\\\"dev\\\":true,\\\"chrome\\\":true} webpack-dev-server --open --mode development --watch",
+    "server": "cross-env THE_CONFIG={\\\"dev\\\":true,\\\"chrome\\\":false} webpack-dev-server --open --mode development --watch",
+    "prod": "webpack --mode production"
   },
   "author": "Witalij Kaa",
   "dependencies": {
     "pixi.js": "4.7.3"
   },
   "devDependencies": {
+    "cross-env": "5.1.4",
     "webpack": "4.6.0",
     "webpack-cli": "2.0.14",
     "webpack-dev-server": "3.1.3",
     "html-webpack-plugin": "3.2.0",
-    "clean-webpack-plugin": "0.1.19"
+    "clean-webpack-plugin": "0.1.19",
+    "babel-loader": "7.1.4",
+    "babel-core": "6.26.0",
+    "babel-preset-env": "1.6.1"
   }
 }
