--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "author": "Witalij Kaa",
   "dependencies": {
-    "pixi.js": "4.7.3"
+    "vue": "2.5.16",
+    "pixi.js": "4.7.3",
+    "stylus": "0.54.5"
   },
   "devDependencies": {
     "cross-env": "5.1.4",
@@ -22,6 +24,11 @@
     "clean-webpack-plugin": "0.1.19",
     "babel-loader": "7.1.4",
     "babel-core": "6.26.0",
-    "babel-preset-env": "1.6.1"
+    "babel-preset-env": "1.6.1",
+    "vue-loader": "14.2.2",
+    "css-loader": "0.28.11",
+    "vue-template-compiler": "2.5.16",
+    "stylus-loader": "3.0.2",
+    "nib": "1.1.2"
   }
 }
