--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "webpack-dev-server": "3.1.3",
     "html-webpack-plugin": "3.2.0",
     "clean-webpack-plugin": "0.1.19",
+    "file-loader": "1.1.11",
     "babel-loader": "7.1.4",
     "babel-core": "6.26.0",
     "babel-preset-env": "1.6.1",
