--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "7.1.4",
     "babel-core": "6.26.0",
     "babel-preset-env": "1.6.1",
+    "babel-polyfill": "6.26.0",
     "pixi.js": "4.7.3",
     "vue": "2.5.16",
     "vue-loader": "14.2.2",
